--- a/src/pages/ProductDetails/index.scss
+++ b/src/pages/ProductDetails/index.scss
@@ -1,31 +1,32 @@
 .productdetail {
-    padding: 0 10% 0 10%;
-    // margin: 0 20% 0 20%;
-    //background-color: #eeeff8;
-    .productdetail-info {
+  max-width: 100vw;
+  box-sizing: border-box;
+  margin: 0 auto;
+  padding: 40px;
+  // margin: 0 20% 0 20%;
+  background-color: #fdf6ee;
+  .productdetail-info {
+    display: flex;
+    justify-content: start;
+    align-items: flex-start;
+    margin-bottom: 8px;
+    &__title {
+      color: #000000;
+      font-size: 20px;
+      width: 15vw;
       display: flex;
-  
-      justify-content: start;
-      align-items: flex-start;
-      margin-bottom: 8px;
-      &__title {
-        color: #000000;
-        font-size: 20px;
-        width: 15vw;
-        display: flex;
-        align-self: flex-start;
-      }
-      p {
-        color: #000;
-        font-size: 20px;
-      }
-      .productdetail-info__name {
-        font-size: 16px;
-        color: #000;
-      }
+      align-self: flex-start;
+    }
+    p {
+      color: #000;
+      font-size: 20px;
+    }
+    .productdetail-info__name {
+      font-size: 16px;
+      color: #000;
     }
   }
-  .ant-breadcrumb-link > a {
-    color: #2c54e6 !important;
-  }
-  
+}
+.ant-breadcrumb-link > a {
+  color: #2c54e6 !important;
+}
