--- a/src/components/VideoCard/index.scss
+++ b/src/components/VideoCard/index.scss
@@ -18,7 +18,7 @@
   right: 13px;
   z-index: 1000;
   background: transparent;
-  color: #fff;
+  color: #020202;
   font-size: 40px;
   border: none;
   outline: none;
