--- a/src/pages/Homes/index.scss
+++ b/src/pages/Homes/index.scss
@@ -14,6 +14,51 @@
   animation-range: entry 0 cover 30%;
 }
 .view {
-  
   background-color: #fdf6ee;
+}
+
+.home-container {
+  .view {
+    .block {
+      margin-bottom: 32px;
+    }
+  }
+
+  .section-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 16px;
+    padding: 0 8px;
+  }
+
+  .section-title {
+    color: #a67c52;
+    font-size: 1.2rem;
+    font-weight: 700;
+    position: relative;
+    padding-bottom: 8px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 50px;
+      height: 3px;
+      background: #a67c52;
+      border-radius: 2px;
+    }
+  }
+
+  .view-more-btn {
+    color: #b47b5c !important;
+    font-weight: 500;
+    transition: all 0.3s ease;
+
+    &:hover {
+      color: #a67c52 !important;
+      transform: translateX(4px);
+    }
+  }
 }
