--- a/src/components/MainCarosel/index.scss
+++ b/src/components/MainCarosel/index.scss
@@ -12,7 +12,7 @@
 .main-carousel-card {
   position: relative;
   width: 100%;
-  height: 38vh;
+  height: 28vh;
   overflow: hidden;
   border-radius: 32px;
   background: #fff;
@@ -51,6 +51,7 @@
   display: flex;
   flex-direction: column;
   gap: 28px;
+  pointer-events: none;
 }
 
 .main-carousel-title {
@@ -63,8 +64,8 @@
 .main-carousel-btn {
   position: absolute;
   left: 20px;
-  top: 300px;
-  z-index: 3;
+  top: 200px;
+  z-index: 999;
   display: inline-block;
   padding: 10px 30px;
   background: #b47b3a;
@@ -74,6 +75,8 @@
   font-size: 1rem;
   text-decoration: none;
   transition: background 0.2s;
+  cursor: pointer;
+  pointer-events: auto;
 }
 .main-carousel-btn:hover {
   background: #a06a2a;
