--- a/src/components/SliderMain/index.scss
+++ b/src/components/SliderMain/index.scss
@@ -67,9 +67,10 @@
     .carousel-img-wrap {
       position: relative;
       width: 100%;
+      
       .carousel-img {
         width: 100%;
-        height: 120px;
+        height: 20vh;
         object-fit: cover;
         border-radius: 10px;
         margin-bottom: 8px;
