--- a/src/components/WorkshopPost/index.scss
+++ b/src/components/WorkshopPost/index.scss
@@ -22,8 +22,8 @@
   border-radius: 14px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.07);
   padding: 24px;
-  max-width: 700px;
-  width: 100%;
+  width: 100vw;
+
   margin: 0 auto;
 
   .submit-btn {
