--- a/src/pages/Services/index.scss
+++ b/src/pages/Services/index.scss
@@ -119,7 +119,7 @@
       border-radius: 4px;
       color: white;
       font-size: 16px;
-
+      cursor: pointer;
       &:hover {
         background-color: darken(#c4a484, 10%);
       }
